--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="34sp"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="64dp"
             android:id="@+id/textView"/>
+
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:id="@+id/editTextUser"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:layout_marginTop="32dp"
+            android:hint="@string/user"
+            android:minHeight="48dp"
+            android:autofillHints=""/>
 
     <EditText
             android:layout_width="0dp"
@@ -26,13 +42,13 @@
             android:id="@+id/editTextEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:layout_marginTop="96dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:hint="@string/email"
             android:minHeight="48dp"
-            android:importantForAutofill="no"/>
+            android:importantForAutofill="no"
+            app:layout_constraintTop_toBottomOf="@+id/editTextUser"
+            android:layout_marginTop="32dp"/>
 
     <EditText
             android:layout_width="0dp"
@@ -50,6 +66,22 @@
             android:layout_marginEnd="32dp"
             android:hint="@string/password"/>
 
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editTextConfirmPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/confirm_password"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:minHeight="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            android:layout_marginTop="32dp"
+            android:importantForAutofill="no"/>
+
     <Button
             android:text="@string/login"
             android:layout_width="128dp"
@@ -59,11 +91,11 @@
             android:layout_marginStart="162dp"
             android:layout_marginEnd="161dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-            android:layout_marginTop="64dp"
             android:textSize="24sp"
             app:cornerRadius="10dp"
-            android:onClick="loginAuth"/>
+            android:onClick="buttonLogin"
+            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
+            android:layout_marginTop="32dp"/>
 
     <Button
             android:text="@string/sign_in"
@@ -75,19 +107,8 @@
             android:textSize="24sp"
             android:textAlignment="center"
             app:cornerRadius="10dp"
-            android:onClick="signinAuth"
+            android:onClick="buttonSignin"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
             android:layout_marginTop="32dp"/>
-
-    <TextView
-            android:text="@string/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewStatus"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonSingin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
