--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,12 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".SignupActivity">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/authentication"
+            android:text="@string/create_account"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +29,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="64dp"
             android:hint="@string/user"
             android:minHeight="48dp"
             android:autofillHints=""/>
@@ -83,23 +83,8 @@
             android:importantForAutofill="no"/>
 
     <Button
-            android:text="@string/login"
-            android:layout_width="128dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonLogin"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="162dp"
-            android:layout_marginEnd="161dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="24sp"
-            app:cornerRadius="10dp"
-            android:onClick="buttonLogin"
-            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
-            android:layout_marginTop="32dp"/>
-
-    <Button
-            android:text="@string/sign_in"
-            android:layout_width="128dp"
+            android:text="@string/sign_up"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonSingin"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +92,20 @@
             android:textSize="24sp"
             android:textAlignment="center"
             app:cornerRadius="10dp"
-            android:onClick="buttonSignin"
-            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-            android:layout_marginTop="32dp"/>
+            android:onClick="buttonSignup"
+            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
+            android:layout_marginTop="64dp"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button"
+            android:text="@string/login_arrow"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSingin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="32dp"
+            android:textSize="20sp"
+            android:onClick="buttonLoginAccount"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
