--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
             android:layout_marginEnd="32dp"
             android:hint="@string/email"
             android:minHeight="48dp"
-            android:autofillHints=""/>
+            android:autofillHints=""
+            android:singleLine="true"/>
 
     <EditText
             android:layout_width="0dp"
@@ -48,7 +49,8 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
             android:hint="@string/password"
             android:minHeight="48dp"
-            android:importantForAutofill="no"/>
+            android:importantForAutofill="no"
+            android:singleLine="true"/>
 
     <Button
             android:text="@string/enter"
