--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,6 +7,15 @@
         android:layout_height="match_parent"
         tools:context=".ChatActivity">
 
+    <View
+            android:layout_width="0dp"
+            android:layout_height="68dp"
+            android:id="@+id/view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="#4A148C"/>
+
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="0dp"
@@ -17,8 +26,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/send_message"
-            android:onClick="btSendAction"
-        />
+            android:onClick="buttonSendMessage"
+            />
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -50,7 +59,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewUser"
             android:backgroundTint="@color/design_default_color_primary"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="16dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
