--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,59 +7,33 @@
         android:layout_height="match_parent"
         tools:context=".ChatActivity">
 
-    <View
-            android:layout_width="0dp"
-            android:layout_height="68dp"
-            android:id="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="#4A148C"/>
-
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             app:srcCompat="@android:drawable/ic_menu_send"
             android:id="@+id/imageButtonSend"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
-            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/send_message"
             android:onClick="buttonSendMessage"
-            />
+            app:layout_constraintTop_toTopOf="@+id/editTextMessage"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
+            style="@style/image_button_style"/>
 
-
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButtonSend"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:id="@+id/textInputLayout">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/message"
-                android:id="@+id/textInputMessage"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
     <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewUser"
-            android:backgroundTint="@color/design_default_color_primary"
-            android:layout_marginTop="16dp">
+            app:layout_constraintBottom_toTopOf="@+id/imageButtonSend"
+            style="@style/scroll_view_style"
+            android:id="@+id/scrollView2"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+            android:layout_marginTop="8dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -77,29 +51,41 @@
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
             android:id="@+id/imageButton2"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/logout"
             android:onClick="deauth"
             app:layout_constraintTop_toTopOf="parent"
+            style="@style/button_menu_style"
             android:layout_marginTop="8dp"/>
 
-    <TextView
-            android:text="@string/user"
+    <EditText
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/textViewUser"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:id="@+id/editTextMessage"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-            app:layout_constraintTop_toTopOf="@+id/imageButton2"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
-            android:textSize="34sp"
-            android:textAlignment="viewStart"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonSend"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="#373737"
-            android:shadowColor="#000000"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            style="@style/message_text_style"
+            android:hint="@string/message"
+            android:autofillHints=""/>
+
+    <ImageView
+            android:layout_width="249dp"
+            android:layout_height="54dp"
+            app:srcCompat="@drawable/simplechat"
+            android:id="@+id/imageView3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
