--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,18 +5,19 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity">
+        tools:context=".LoginActivity"
+        android:background="@color/gray_dark">
 
     <TextView
             android:text="@string/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="64dp"
-            android:textSize="34sp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            style="@style/text_view_title"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
 
     <EditText
             android:layout_width="0dp"
@@ -24,16 +25,18 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/editTextEmailLogin"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:layout_marginTop="64dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:hint="@string/email"
             android:minHeight="48dp"
             android:autofillHints=""
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
+            style="@style/edit_text_style"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     <EditText
             android:layout_width="0dp"
@@ -41,40 +44,51 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editTextPasswordLogin"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
             android:hint="@string/password"
             android:minHeight="48dp"
             android:importantForAutofill="no"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
+            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/edit_text_style"/>
 
     <Button
             android:text="@string/enter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonLogin"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="64dp"
+            android:onClick="buttonLogin"
+            style="@style/button_style"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin"
-            app:cornerRadius="10dp"
-            android:textSize="24sp"
-            android:onClick="buttonLogin"/>
-
-    <Button
-            android:text="@string/create_account_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonCreateAccount"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
+
+    <TextView
+            android:text="@string/create_account_arrow"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:id="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-            android:layout_marginTop="64dp"
-            android:onClick="buttonCreateAccount"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="buttonCreateAccount"
+            style="@style/link_button"/>
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            app:srcCompat="@drawable/simplechat"
+            android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.888"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
