--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,18 +5,19 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignupActivity">
+        tools:context=".SignupActivity"
+        android:background="@color/gray_dark">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/create_account"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/editTextUser"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="34sp"
-            android:layout_marginTop="64dp"
-            android:id="@+id/textView"/>
+            app:layout_constraintStart_toStartOf="parent"
+            style="@style/text_view_title"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <EditText
             android:layout_width="0dp"
@@ -24,16 +25,17 @@
             android:inputType="text"
             android:ems="10"
             android:id="@+id/editTextUser"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:layout_marginTop="64dp"
             android:hint="@string/user"
             android:minHeight="48dp"
             android:autofillHints=""
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/edit_text_style"/>
 
     <EditText
             android:layout_width="0dp"
@@ -41,16 +43,17 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/editTextEmail"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:hint="@string/email"
             android:minHeight="48dp"
             android:importantForAutofill="no"
+            android:singleLine="true"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextUser"
-            android:layout_marginTop="32dp"
-            android:singleLine="true"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
+            style="@style/edit_text_style"/>
 
     <EditText
             android:layout_width="0dp"
@@ -60,14 +63,15 @@
             android:id="@+id/editTextPassword"
             android:minHeight="48dp"
             android:autofillHints=""
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:hint="@string/password"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+            app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            style="@style/edit_text_style"/>
 
     <EditText
             android:layout_width="0dp"
@@ -75,41 +79,51 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editTextConfirmPassword"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/confirm_password"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="32dp"
             android:minHeight="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-            android:layout_marginTop="32dp"
             android:importantForAutofill="no"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/buttonSingin"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            style="@style/edit_text_style"/>
 
     <Button
             android:text="@string/sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonSingin"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="24sp"
             android:textAlignment="center"
-            app:cornerRadius="10dp"
             android:onClick="buttonSignup"
             app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
-            android:layout_marginTop="64dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView4"
+            style="@style/button_style"/>
 
-    <Button
+    <TextView
+            android:text="@string/login_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:text="@string/login_arrow"
-            app:layout_constraintTop_toBottomOf="@+id/buttonSingin"
+            android:id="@+id/textView4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp"
-            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSingin"
+            style="@style/link_button"
             android:onClick="buttonLoginAccount"/>
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            app:srcCompat="@drawable/simplechat"
+            android:id="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
