--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="black">#242329</color>
+    <color name="gray">#575A5E</color>
+    <color name="gray_light">#979797</color>
+    <color name="white">#F4F7F5</color>
+    <color name="green">#3ED598</color>
+    <color name="gray_dark">#303030</color>
 </resources>
