--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,69 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.SimpleChat" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.SimpleChat" parent="Theme.AppCompat.NoActionBar"/>
+    <style name="Theme.SimpleChat" parent="Base.Theme.SimpleChat"/>
+
+    <style name="button_style" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:minWidth">128dp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="Theme.SimpleChat" parent="Base.Theme.SimpleChat"/>
+    <style name="button_menu_style" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/button_menu_background</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:minHeight">48dp</item>
+    </style>
+
+    <style name="image_button_style" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minWidth">48dp</item>
+    </style>
+
+    <style name="edit_text_style" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/gray_light</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="message_text_style" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/edit_text_message</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/gray_light</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="text_view_title" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="link_button" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:minWidth">144dp</item>
+    </style>
+
+    <style name="scroll_view_style">
+        <item name="android:background">@drawable/scroll_view_background</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:scrollbars">vertical</item>
+    </style>
+
+
 </resources>
