--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#F4F7F5</color>
     <color name="green">#3ED598</color>
     <color name="gray_dark">#303030</color>
+    <color name="blue">#2B48F6</color>
 </resources>
