--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,16 +9,16 @@
 
     <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="48dp"
             app:srcCompat="@android:drawable/ic_menu_send"
             android:id="@+id/imageButtonSend"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/send_message"
             android:onClick="buttonSendMessage"
-            app:layout_constraintTop_toTopOf="@+id/editTextMessage"
+            style="@style/image_button_style"
             app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
-            style="@style/image_button_style"/>
+            app:layout_constraintTop_toTopOf="@+id/editTextMessage"/>
 
 
     <ScrollView
@@ -28,17 +28,18 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageButtonSend"
+            app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
             style="@style/scroll_view_style"
-            android:id="@+id/scrollView2"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+            android:id="@+id/scrollView"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
             android:layout_marginTop="8dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:id="@+id/messagesBox">
 
             <TextView
                     android:layout_width="match_parent"
@@ -48,44 +49,61 @@
         </LinearLayout>
     </ScrollView>
 
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
-            android:id="@+id/imageButton2"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/logout"
-            android:onClick="deauth"
+    <ImageView
+            android:layout_height="48dp"
+            app:srcCompat="@drawable/simplechat"
+            android:id="@+id/imageViewLogo"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            style="@style/button_menu_style"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/todo"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="32dp"
+            android:layout_width="0dp"/>
 
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="textMultiLine"
+            android:gravity="start|top"
             android:ems="10"
             android:id="@+id/editTextMessage"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButtonSend"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
             style="@style/message_text_style"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
             android:hint="@string/message"
-            android:autofillHints=""/>
+            android:autofillHints=""
+            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+            android:layout_marginEnd="8dp"/>
 
-    <ImageView
-            android:layout_width="249dp"
-            android:layout_height="54dp"
-            app:srcCompat="@drawable/simplechat"
-            android:id="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="parent"
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:srcCompat="@android:drawable/ic_menu_gallery"
+            android:id="@+id/imageButton2"
+            style="@style/image_button_style"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
+            app:layout_constraintTop_toTopOf="@+id/editTextMessage"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonSend"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/send_image"
+            android:onClick="sendImage"/>
+
+    <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+            android:id="@+id/imageButton3"
+            android:background="#00000000"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"/>
+            android:contentDescription="Deauth"
+            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+            android:onClick="closeChat"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
