--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,9 +38,9 @@
 
     <style name="message_text_style" parent="Widget.AppCompat.EditText">
         <item name="android:background">@drawable/edit_text_message</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textColorHint">@color/gray_light</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:padding">12dp</item>
@@ -60,10 +60,13 @@
     </style>
 
     <style name="scroll_view_style">
-        <item name="android:background">@drawable/scroll_view_background</item>
         <item name="android:padding">12dp</item>
         <item name="android:scrollbars">vertical</item>
     </style>
 
-
+    <style name="message_style" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/background_message</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
 </resources>
