--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,11 +74,11 @@
             android:layout_height="48dp"
             android:id="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:onClick="buttonCreateAccount"
-            style="@style/link_button"/>
+            style="@style/link_button"
+            app:layout_constraintBottom_toTopOf="@+id/textView6"/>
 
     <ImageView
             android:layout_width="wrap_content"
@@ -90,5 +90,13 @@
             app:layout_constraintVertical_bias="0.888"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="Reset password"
+            android:layout_width="150dp"
+            android:layout_height="48dp" android:id="@+id/textView6"
+            style="@style/link_button"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:textColor="#99F4F7F5" android:onClick="changePassword"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
